# herdr-checkin

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  herdr-plugin.toml
.github/workflows/: ci.yml
demo/: herdr-checkin.tape  herdr-session-config.toml  herdr-session-setup.sh
demo/plugin/: fake-herdr.sh  herdr-plugin.toml  open-pane.sh  run-pane.sh
docs/: agents-view-design.md  triage-overlay-design.md
scripts/: open-pane.sh  pane-demo-setup.sh  pane-demo.tape
src/: actions.rs  herdr.rs  herdr_id.rs  lib.rs  main.rs  pane.rs  queue.rs  roster.rs  roster_state.rs  state.rs  test_support.rs
src/fixtures/: agent_list.json  agent_read_amp_done.txt  agent_read_claude_blocked.txt  agent_read_claude_working.txt  agent_read_codex_idle.txt
src/pane/: agents_view.rs  compose.rs  mod.rs  queue_view.rs  theme.rs
tests/: cli.rs
