[package]
name = "herdr-checkin"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Herdr plugin: a durable attention queue for agent panes."
repository = "https://github.com/Akram012388/herdr-checkin"

[dependencies]
fs2 = "0.4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
