[package]
name = "herdr-checkin"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Herdr plugin: a durable attention queue for agent panes."
repository = "https://github.com/Akram012388/herdr-checkin"

[dependencies]
fs2 = "0.4"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tui-textarea = "0.7"
# Display-width aware wrapping + cursor placement for the inline-reply compose strip, so wide
# (CJK/combining) characters don't drift the caret off the text. Already in the tree via ratatui.
unicode-width = "0.2"
